INT-misc-42a28.24: Changed Universe rename and Fleet ACS pages a bit to fix Chrome jump bug

--- a/design/css/global.css
+++ b/design/css/global.css
@@ -284,7 +284,8 @@ textarea {
 /* One-line vertically centered, space distributed non-wrapping  */
 .contF,
 .contFJ,
-.contFS
+.contFS,
+.contFC
 {
   display: flex;
 
@@ -307,6 +308,11 @@ textarea {
 .contFE {
   text-align: right;
   justify-content: flex-end;
+}
+/* CONTainer Flex Center*/
+.contFC {
+  justify-content: center;
+  align-items: center;
 }
 
 .flexW {
